--- a/tethysapp/wqm/public/css/pages/settings.css
+++ b/tethysapp/wqm/public/css/pages/settings.css
@@ -1,4 +1,3 @@
-
 .menu-box {
     /* width: 21%; */
     background-color: #1F325C;
@@ -83,7 +82,8 @@
     margin-bottom: 4px;
 }
 
-.filter-box__item input, .filter-box__item select {
+.filter-box__item input,
+.filter-box__item select {
     border-radius: 0px;
 }
 
@@ -108,7 +108,7 @@
     padding: 4px 8px;
 }
 
-.filter-box__item.filter-box__buttons button i{
+.filter-box__item.filter-box__buttons button i {
     margin-right: 4px;
     font-size: 16px;
 }
@@ -118,7 +118,9 @@
     margin-bottom: 8px;
 }
 
-.content-box__content form input, .content-box__content form select, .content-box__content form button {
+.content-box__content form input,
+.content-box__content form select,
+.content-box__content form button {
     border-radius: 0px;
 }
 
@@ -128,16 +130,16 @@
 }
 
 
-#ms-detail-modal .modal-content{
+#ms-detail-modal .modal-content {
     font-size: 14px;
     border-radius: 0;
 }
 
-#ms-detail-modal .modal-content h6{
+#ms-detail-modal .modal-content h6 {
     margin: 0;
 }
 
-#ms-detail-modal .modal-content button{
+#ms-detail-modal .modal-content button {
     font-size: 10px;
     border-radius: 0;
 }
@@ -176,7 +178,9 @@
     margin-bottom: 16px;
 }
 
-#wqi-lookup-table, #params-table, #notify-table {
+#wqi-lookup-table,
+#params-table,
+#notify-table {
     font-size: 12px;
 }
 
@@ -198,7 +202,8 @@
     min-width: 100px;
 }
 
-.smtp-box__item input, .smtp-box__item textarea {
+.smtp-box__item input,
+.smtp-box__item textarea {
     width: 90%;
     /* max-width: 500px; */
     border-radius: 0;
@@ -238,4 +243,24 @@ div.dt-container .top {
 
 #wqi-lookup-cancel-btn {
     margin-right: 8px;
+}
+
+#ms-water-point-modal {
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 0px;
+    padding: 8px;
+    margin: 0 0 16px 0;
+    list-style-type: none;
+    height: 120px;
+    overflow: auto;
+}
+
+#search-ms-water-point-modal {
+    height: 32px;
+    border: 1px solid #ccc;
+    width: 100%;
+    border-radius: 0px;
+    margin-bottom: 8px;
+    padding: 4px;
 }
