--- a/tethysapp/wqm/public/css/main.css
+++ b/tethysapp/wqm/public/css/main.css
@@ -129,7 +129,7 @@ body > div:first-child {
     padding: 10px;
     padding-right: 16px;
     z-index: 10;
-    /* width: 300px; */
+    width: 300px;
 }
 
 .legend-item {
