--- a/tethysapp/wqm/public/css/pages/dashboard.css
+++ b/tethysapp/wqm/public/css/pages/dashboard.css
@@ -80,11 +80,12 @@
     width: 100%;
     justify-content: center;
     margin-top: 8px;
+    margin-bottom: 8px;
 }
 
 .play-button {
     display: block;
-    margin: 10px auto;
+    margin: 6px 0px 8px 0px;
     padding: 0 8px;
     font-size: 24px;
 }
