--- a/tethysapp/wqm/templates/wqm/pages/dashboard.html
+++ b/tethysapp/wqm/templates/wqm/pages/dashboard.html
@@ -44,7 +44,7 @@
             </div>
         </div>
 
-        <div class="legend" id="dashboard-map-legend">
+        <div class="legend" id="dashboard-map-legend" style="padding-bottom: 20px;">
             <p class="mb-2"><b>Chú giải</b></p>
 
             <div class="legend-item">
@@ -54,24 +54,7 @@
                 <span class="legend-text">Điểm khai thác nước</span>
             </div>
             <p class="mt-4 mb-2"><b>Điểm quan trắc</b></p>
-            
-
-            <!-- <div class="time-demension">
-                <button id="play-button" class="btn play-button">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-play-fill" viewBox="0 0 16 16">
-                        <path
-                            d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393" />
-                    </svg>
-                </button>
-                <div id="slider-container" class="slider-container">
-                    <div id="slider" class="slider"></div>
-                    <div id="slider-tooltip" class="slider-tooltip">
-                        <span id="slider-tooltip-text"></span>
-                    </div>
-                </div>
-            </div> -->
-
+        
         </div>
     </div>
 </div>
